@@ -5535,20 +5535,26 @@ $ #Редактор конфигурации#
 
  Кроме клавиш перемещения по списку доступны следующие сочетания:
 
- #Enter# или #F4#  изменить значение параметра,
-               boolean и 3-state на месте,
-               для integer и string вызывается диалог.
+ #Enter# или #F4#
+ Переключить или редактировать значение.
 
- #Shift+F4#      Для типа integer вызывается диалог ввода 16-ричного числа,
-               всё прочее как для #F4#.
+ #Shift+F4#
+ Редактировать целое значение как шестнадцатеричное число. Для прочих типов аналогично #F4#.
 
- #Del#           Сбросить параметр в значение по умолчанию.
+ #Alt+F4#
+ Редактировать целое значение как двоичное число. Для прочих типов аналогично #F4#.
 
- #Ctrl+H#        Скрыть/показать параметры, значения которых не изменены (соответствуют значениям по умолчанию).
+ #Del#
+ Сбросить параметр в значение по умолчанию.
 
- #Shift+F1#      Показать описание параметра, если оно доступно.
+ #Ctrl+H#
+ Переключить отображение неизмененных параметров.
 
- #Ctrl+Alt+F#    Включить/Выключить режим фильтрации.
+ #Shift+F1#
+ Показать описание параметра, если оно доступно.
+
+ #Ctrl+Alt+F#
+ Переключить режим режим быстрой фильтрации.
 
 
 @Codepages.NoAutoDetectCP
