@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 17.06.2021 21:25:13 +0100 - build 5827
+
+1. In far:config Alt+F4 edits integer values as binary.
+
+--------------------------------------------------------------------------------
 drkns 17.06.2021 02:05:29 +0100 - build 5826
 
 1. Continue 5822.2. More experimental removals.
